# DearImGuiProject

./: CMakeLists.txt  README.md
inc/: ButtonUI.hpp  CheckBoxUI.hpp  ColorEditUI.hpp  Manager.hpp  PlotLinesUI.hpp  SliderUI.hpp  SystemUIManager.hpp  TextUI.hpp  UIElement.hpp  UIElementsManager.hpp  UIManager.hpp  WindowManager.hpp  WindowManagerConfig.hpp  WindowUI.hpp  controller.hpp  debug.hpp  model.hpp  view.hpp
src/: ButtonUI.cpp  ChecBox.cpp  ColorEditUI.cpp  PlotLinesUI.cpp  SliderUI.cpp  SystemUIManager.cpp  TextUI.cpp  UIElementsManager.cpp  UIManager.cpp  WindowManager.cpp  WindowUI.cpp  controller.cpp  main.cpp  model.cpp  view.cpp
